--- a/implementacao/api/package.json
+++ b/implementacao/api/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.4.1",
     "class-validator": "^0.14.0",
