--- a/implementacao/api/package.json
+++ b/implementacao/api/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.17.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -28,6 +29,7 @@
     "@prisma/client": "^5.4.1",
     "azure-storage": "^2.10.7",
     "class-validator": "^0.14.0",
+    "nodemailer": "^6.9.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
