--- a/implementacao/api/package.json
+++ b/implementacao/api/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.4.1",
     "azure-storage": "^2.10.7",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "nodemailer": "^6.9.7",
     "reflect-metadata": "^0.1.13",
